:zap: wip: simplify api
